@@ -1,0 +1,8 @@
+# Copyright (c) 2007-2008 The PyAMF Project.
+# See LICENSE for details.
+
+"""
+Python C-extensions for L{PyAMF<pyamf>}.
+
+@since: 0.4
+"""
