@@ -10,7 +10,7 @@ name: PyAMF API Documentation
 url: http://pyamf.org/
 
 # The list of objects to document.
-modules: pyamf
+modules: pyamf, cpyamf
 
 # Don't examine in any way the modules whose dotted name match this
 # regular expression pattern.
