@@ -6,6 +6,8 @@ of PyAMF.
 
 0.4.0 (unreleased)
 ------------------
+ - Python C-extension for the pyamf.util.BufferedByteStream class. Contributed
+   by Gerard Escalante (Ticket:225)
  - New API to add headers such as cookies in pyamf.remoting.client (Ticket:337)
  - Now clearing the context between remoting requests (Ticket:309)
  - Fixed issue with AMF3 class definition references (Ticket:341)
